--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -32,6 +32,7 @@
             overflow: hidden;
             padding: 15px  20px 15px  30px;
             position:relative;
+            height: 34px;
         }
         .topDiv:after{
             position: absolute;
