--- a/public/schoolClass/classReviewList.html
+++ b/public/schoolClass/classReviewList.html
@@ -39,11 +39,11 @@
             content: "";
             width: 100%;
             border-bottom: 1px #E6E6E6 solid;
-            -webkit-transform: translateY(-50%);
+            /*-webkit-transform: translateY(-50%);
             -moz-transform: translateY(-50%);
             -ms-transform: translateY(-50%);
             -o-transform: translateY(-50%);
-            transform: translateY(-50%);
+            transform: translateY(-50%);*/
             bottom: 0;
             left: 0;
         }
