--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -39,11 +39,11 @@
             content: "";
             width: 100%;
             border-bottom: 1px #E6E6E6 solid;
-            -webkit-transform: translateY(-50%);
+            /*-webkit-transform: translateY(-50%);
             -moz-transform: translateY(-50%);
             -ms-transform: translateY(-50%);
             -o-transform: translateY(-50%);
-            transform: translateY(-50%);
+            transform: translateY(-50%);*/
             bottom: 0;
             left: 0;
         }
@@ -205,7 +205,7 @@
 
 <body>
 <div class="topDiv">
-    <h1>正在开课</h1>
+    <h1>正在直播</h1>
     <span class="courseBtn" onclick="openUnionClass();">新建课堂</span>
 </div>
 
