--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -31,7 +31,7 @@
             <div class="left_box">
                 <div class="header">课堂管理</div>
                 <div id="classInfo" class="active">课程信息</div>
-               <!-- <div id="classReview">课程回顾</div> -->
+                <div id="classReview">课程回顾</div>
                 <div id="myFile">我的课件</div>
             </div>
             <div class="right_box">
@@ -67,7 +67,7 @@
         var teacherName = Service.getQueryString("teacherName");
         getUserById();
         $('#classInfo_iframe').attr('src','unionClassList.html?teacherId='+teacherId+'&teacherName='+teacherName+'');
-        $('#classReview_iframe').attr('src','classReviewList.html??teacherId='+teacherId+'&teacherName='+teacherName+'');
+        $('#classReview_iframe').attr('src','classReviewList.html?teacherId='+teacherId+'&teacherName='+teacherName+'');
         $('#myFile_iframe').attr('src','https://jiaoxue.maaee.com:8099/#/antPlate?ident='+teacherId+'&fileId=-1&title=蚁盘题目&phoneType=0')
 
         //socket 监听
