--- a/public/schoolClass/classReviewList.html
+++ b/public/schoolClass/classReviewList.html
@@ -155,6 +155,7 @@
             text-align: center;
             color: #888;
             padding: 10px 0;
+            cursor: pointer;
         }
         .rightCont{
             position: relative;
@@ -257,8 +258,12 @@
 
     //点击加载更多
     $("#loading").on('click',function(){
-        pageNo++;
-        getUnionClassList();
+        if($("#loading").text() == "数据已全部加载"){
+            return;
+        }else{
+            pageNo++;
+            getUnionClassList();
+        }
 //        console.log('加载更多');
     })
     function getUnionClassList() {
@@ -318,8 +323,9 @@
                // $("#loading").text("没有获取到数据...");
                if(pageNo == 1){
                    $(".emptyCont").show();
+                   $("#loading").text("")
                }else{
-                   $("#loading").text("数据已全部加载")
+                   $("#loading").text("数据已全部加载");
                }
 
            }
