--- a/public/schoolClass/classReviewList.html
+++ b/public/schoolClass/classReviewList.html
@@ -5,205 +5,13 @@
     <title>联合开课列表</title>
     <link rel="icon" href="img/logo_title.png" type="image/x-icon">
     <link rel="shortcut icon" href="img/logo_title.png" type="image/x-icon"/>
+    <link href="css/classReviewList.css" rel="stylesheet" >
     <script type="application/javascript" src="js/jquery.min.js"></script>
     <script type="application/javascript" src="js/layer/layer.js"></script>
     <script type="application/javascript" src="js/service.js"></script>
     <script type="application/javascript" src="js/platform.js"></script>
     <style type="text/css">
-        body,html{
-            margin: 0;
-            background-color: #ECEFF8;
-            overflow: hidden;
-            height: 100vh;
-            font-family: "Microsoft YaHei", "Hiragino Sans GB", Helvetica, Arial;
-        }
-        .layui-layer{
-            box-shadow: 0px 6px 50px rgba(0,0,0,0.4) !important;
-            font-family: "Microsoft YaHei", "Hiragino Sans GB", Helvetica, Arial;
-            animation: none !important;
-        }
-        .layui-layer-shade{
-            opacity: 0 !important;
-        }
-        .layui-layer-title{
-            font-size: 15px !important;
-        }
-        .topDiv{
-            overflow: hidden;
-            padding: 15px  20px 15px  30px;
-            position:relative;
-            height: 34px;
-        }
-        .topDiv:after{
-            position: absolute;
-            content: "";
-            width: 100%;
-            border-bottom: 1px #E6E6E6 solid;
-            /*-webkit-transform: translateY(-50%);
-            -moz-transform: translateY(-50%);
-            -ms-transform: translateY(-50%);
-            -o-transform: translateY(-50%);
-            transform: translateY(-50%);*/
-            bottom: 0;
-            left: 0;
-        }
-        .topDiv h1{
-            color: #333333;
-            font-size: 22px;
-            float: left;
-            margin: 0;
-            line-height: 1;
-            font-weight: bold;
-            padding-top: 7px;
-        }
-        .courseBtn{
-            font-size: 14px;
-            padding: 9px 17px 0 35px;
-            height: 25px;
-            line-height: 1;
-            color:#fff;
-            background: #4285F4 url("img/icon_add_course1.png") no-repeat 14px 10px;
-            background-size: 12px;
-            -webkit-border-radius: 17px;
-            -moz-border-radius: 17px;
-            border-radius: 4px;
-            float: right;
-            cursor: pointer;
-        }
-        #ul_list{
-                    height: calc(100% - 164px);
-                    /*height: 300px;*/
-                    overflow-x: hidden;
-                    overflow-y: auto;
-                    padding-left: 30px;
-                    padding-right: 20px;
-        }
-        #item_container{
 
-
-        }
-        ::-webkit-scrollbar {
-            width: 8px;
-            height: 12px;
-        }
-
-        /* 这是针对缺省样式 (必须的) */
-        ::-webkit-scrollbar-thumb {
-            background-color: #ccc;
-            border-radius: 9px;
-            -webkit-border-radius: 9px;
-        }
-
-        /* 滑块颜色 */
-        ::-webkit-scrollbar-button {
-            background-color: initial;
-        }
-        .item{
-            position: relative;
-            border-radius: 4px;
-            color: #333;
-            font-size: 15px;
-            line-height: 20px;
-            padding: 36px 0 20px 0;
-            margin-top: 42px;
-            background-color: white;
-            margin-bottom: 15px;
-            border:none;
-        }
-        .self .rightCont > #title{
-            font-size: 18px;
-            background-color: #FFEBC4 !important;
-            color: #333;
-            position: absolute;
-            top: -58px;
-            left: -2px;
-            width: 70%;
-            border-radius: 4px;
-            line-height: 40px;
-            padding: 0 22px;
-            box-sizing: border-box;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            overflow: hidden;
-        }
-        .self > .joinBtn{
-            background: #F49242 !important;
-
-        }
-        #title{
-            font-size: 18px;
-            background-color: #C4DAFF;
-            color: #333;
-            position: absolute;
-            top: -58px;
-            left: -2px;
-            width: 70%;
-            border-radius: 4px;
-            line-height: 40px;
-            padding: 0 22px;
-            box-sizing: border-box;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            overflow: hidden;
-        }
-
-        #main_teacher_name,#union_teacher_name{
-            margin-bottom: 12px;
-        }
-        #loading{
-            font-size: 14px;
-            text-align: center;
-            color: #888;
-            padding: 10px 0;
-            cursor: pointer;
-        }
-        .rightCont{
-            position: relative;
-            padding-left: 18px;
-        }
-        .emptyCont{
-            position: absolute;
-            left: 50%;
-            top:50%;
-            -webkit-transform: translate(-50%,-50%);
-            -moz-transform: translate(-50%,-50%);
-            -ms-transform: translate(-50%,-50%);
-            -o-transform: translate(-50%,-50%);
-            transform: translate(-50%,-50%);
-            z-index: 20;
-            text-align: center;
-            color: #666;
-            width: 210px;
-            font-size: 14px;
-        }
-        .emptyCont img{
-            width: 100%;
-            margin-bottom: 5px;
-        }
-        .joinBtn{
-            position: absolute;
-            right: 15px;
-            top: 50%;
-            color: #fff;
-            font-size: 14px;
-            box-sizing: border-box;
-            -webkit-transform: translateY(-50%);
-            -moz-transform: translateY(-50%);
-            -ms-transform: translateY(-50%);
-            -o-transform: translateY(-50%);
-            transform: translateY(-50%);
-            cursor: pointer;
-            background: #6696e6;
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-            text-align: center;
-            padding-top: 10px;
-            letter-spacing: 0.5px;
-        }
-        .layer-anim{
-            animation:none !important;
-        }
     </style>
 </head>
 
