--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -139,7 +139,7 @@
                         // window.location.href = 'https://www.maaee.com/openvidu/schoolClass/syncClassroom.html?teacherId=' + res.response.colUid + '&teacherName=' + res.response.userName + '';
 
                     } else {
-                        alert('用户不存在');
+                        alert('密码错误');
                     }
                 },
                 error: function (e) {
