--- a/public/schoolClass/videoSourceSelect.html
+++ b/public/schoolClass/videoSourceSelect.html
@@ -43,7 +43,7 @@
             <span onclick="addScreen()" class="menu-btn"><i class="videoSource-menu4"></i>添加桌面</span>
             <div class="menu-btn" onclick="startServerRecord();">
                 <i class="videoSource-menu3" id="recordingTipImg"></i>
-                <span id="recordingTipText">点击录屏</span>
+                <span id="recordingTipText">服务端录屏</span>
             </div>
 
         </div>
