--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -1929,25 +1929,25 @@ video{
   }
 
   function changeFengpingItemStyle(){
-      showBigVideo(null,false,false);
-      var isHidden = $("#right").is(':hidden');
-      if(isHidden){
-          var videoCount = $("#video_container").children().length;
-          var width = "calc(50% - 10px)";
-          var height = "50%";
-          if(videoCount == 1){
-              width = "100%";
-              height = "calc(100% - 12px)";
-          }else if(videoCount == 2){
-              width = "calc(50% - 10px)";
-              height = "calc(100% - 12px)";
-          }else{
-              width = "calc(50% - 10px)";
-              height = "calc(50% - 12px)";
-          }
-          var videos = $(".fenping_video");
-          videos.css({'width':width,'height':height});
-	  }
+      // showBigVideo(null,false,false);
+      // var isHidden = $("#right").is(':hidden');
+      // if(isHidden){
+      //     var videoCount = $("#video_container").children().length;
+      //     var width = "calc(50% - 10px)";
+      //     var height = "50%";
+      //     if(videoCount == 1){
+      //         width = "100%";
+      //         height = "calc(100% - 12px)";
+      //     }else if(videoCount == 2){
+      //         width = "calc(50% - 10px)";
+      //         height = "calc(100% - 12px)";
+      //     }else{
+      //         width = "calc(50% - 10px)";
+      //         height = "calc(50% - 12px)";
+      //     }
+      //     var videos = $(".fenping_video");
+      //     videos.css({'width':width,'height':height});
+	  // }
   }
 
   function goVideoManaerPage(){
